--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.10",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
